Made viewport panes resizable Fixed problem of viewport not showing robot after loading

--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,40 @@ body {
 	overscroll-behavior: none;
 }
 
-.background-container {
+.main-container {
+	display: flex;
+	flex-direction: row;
 	position: absolute;
-	background: #363b4b; /* nice 2nd gradient color: #9198e5 */
-	z-index: 0;
+	z-index: 2;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
+}
+
+
+.blocks-container {
+	width: calc(50% - 25px);
+	height: calc(100% - 20px);
+	margin-top: 10px;
+	margin-left: 10px;
+}
+
+
+.gutter.gutter-horizontal {
+	background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
+	cursor: ew-resize;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	height: calc(100% - 20px);
+	flex-shrink: 0;
+}
+
+
+.sim-container {
+	width: calc(50% - 25px);
+	height: calc(100% - 20px);
+	margin-top: 10px;
+	margin-right: 10px;
 }
 
 .loading-message {
@@ -19,47 +47,15 @@ body {
 	transform: translate(-50%, -50%);
 	font-family: InfoTextOT, Arial;
 	position: absolute;
-}
-
-.main-container {
-	position: absolute;
-	z-index: 2;
-	width: 100%;
-	height: 100%;
-}
-
-.blocks-container {
-	position: absolute;
-	z-index: 5;
-	width: calc(50% - 25px);
-	height: calc(100% - 20px);
-	top: 10px;
-	left: 10px;
-}
-
-#blocks-toolbox {
-	position: absolute;
-	z-index: 10;
-	height: 100%;
-	left: 10px;
-	padding: 4px 0 4px 0;
-	overflow-x: visible;
-	overflow-y: auto;
-}
-
-.sim-container {
-	position: absolute;
-	width: calc(50% - 25px);
-	height: calc(100% - 20px);
-	top: 10px;
-	right: 10px;
+	z-index: 0;
 }
 
 #sim-canvas {
-	display: block;
-	position: absolute;
-	width: 100%;
+	position: relative;
+	margin-top: 10px;
+	z-index: 2;
 	height: 100%;
+	width: 100%;
 }
 
 #sim-stats {
@@ -74,8 +70,8 @@ body {
 	align-items: center;
 	position: absolute;
 	z-index: 100;
-	left: 50%;
-	bottom: 15px;
+	left: 15px;
+	bottom: 5px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 0;
@@ -125,4 +121,3 @@ body {
 	color: grey;
 	border-color: grey;
 }
-
